# deathbed

./: .coverage  README.md  deathbed-report.html  pyproject.toml
.github/workflows/: deathbed.yml
deathbed/: __init__.py  analyzer.py  ci_gen.py  cli.py  config.py  decay.py  display.py  export.py  filters.py  git_utils.py  heatmap.py  history.py  hook.py  org.py  planner.py  scoring.py  tui.py  utils.py
deathbed/display/: __init__.py  palette.py  renderers.py  runners.py
tests/: conftest.py  test_analyzer.py  test_ci_gen.py  test_cli.py  test_config.py  test_decay.py  test_display.py  test_display_extra.py  test_export.py  test_filters.py  test_git_utils.py  test_heatmap.py  test_history.py  test_hook.py  test_org.py  test_planner.py  test_scoring.py  test_tui.py  test_utils.py
